feat: support admin notification query filters
